# QT_Sinus

./: CMakeLists.txt  Sinus.pro  SinusWorker.cpp  SinusWorker.h  coordwindow.cpp  coordwindow.ui  lib.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  statewindow.cpp  statewindow.h  statewindow.ui
inc/: SinusWorker.h  coordwindow.h  lib.h  mainwindow.h  statewindow.h
qrcodegen/: Makefile
src/: SinusWorker.cpp  coordwindow.cpp  coordwindow.ui  mainwindow.cpp  statewindow.cpp  statewindow.ui
